# 2526-student-practices-10th-grade-ulvie_mustafa-ivayla_keserdzhieva

./: INTEGRATION_GUIDE.md  README.md
cinema_business/: cinema_business.vcxproj  cinema_business.vcxproj.filters  presentation_business.vcxproj
cinema_business/src/: cinema_business.cpp
cinema_data/: cinema_data.vcxproj  cinema_data.vcxproj.filters
cinema_logic/: cinema_logic.vcxproj
cinema_logic/src/: cinema_logic.cpp
cinema_presentation/: CMakeLists.txt  QUICK_REFERENCE.md  README_SLINT.md  SLINT_SETUP.md  build.bat  build.sh  cinema_presentation.slnx  cinema_presentation.vcxproj  cinema_presentation.vcxproj.filters
cinema_presentation/include/: CinemaUIController.h  UIStateManager.h
cinema_presentation/src/: CinemaUIController.cpp  UIStateManager.cpp  cinema.slint  main.cpp  mainScreen.slint
